ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/LeftShifts/parserErrorRecovery_LeftShift1/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/LeftShifts/parserErrorRecovery_LeftShift1/input.ts:1:29
  |
1 | retValue = bfs.VARIABLES >> );
  |                             ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/LeftShifts/parserErrorRecovery_LeftShift1/input.ts:1:1
  |
1 | retValue = bfs.VARIABLES >> );
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[1005]: Expected a statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/LeftShifts/parserErrorRecovery_LeftShift1/input.ts:1:29
  |
1 | retValue = bfs.VARIABLES >> );
  |                             ^

